--- a/doc/latex/classSeatPlan.tex
+++ b/doc/latex/classSeatPlan.tex
@@ -101,7 +101,13 @@ void \hyperlink{classSeatPlan_a67c10e2277f1f2823581cddf4df373c5}{Write\-H\-T\-M\
 \hypertarget{classSeatPlan_a99f24fdf486af2b45bf142558011573d}{S\-T\-R\-I\-N\-G\-\_\-4\-D\-V\-E\-C {\bfseries seat}}\label{classSeatPlan_a99f24fdf486af2b45bf142558011573d}
 
 \item 
-\hypertarget{classSeatPlan_a6ab2c5bd6291efe735b3f413ffe9f9bf}{int {\bfseries z}}\label{classSeatPlan_a6ab2c5bd6291efe735b3f413ffe9f9bf}
+\hypertarget{classSeatPlan_ac623e253b6005a0907c2dab61705f2ab}{int {\bfseries text\-Width}}\label{classSeatPlan_ac623e253b6005a0907c2dab61705f2ab}
+
+\item 
+\hypertarget{classSeatPlan_a2e67c39e7c6fff250ce3dc727f0680fd}{int {\bfseries text\-Width1}}\label{classSeatPlan_a2e67c39e7c6fff250ce3dc727f0680fd}
+
+\item 
+\hypertarget{classSeatPlan_aff452e60a99eb2582210d3ea7f454a32}{int {\bfseries rect\-Width}}\label{classSeatPlan_aff452e60a99eb2582210d3ea7f454a32}
 
 \item 
 \hypertarget{classSeatPlan_a878a765b96afb02615e7eb29bac8678d}{int {\bfseries x}}\label{classSeatPlan_a878a765b96afb02615e7eb29bac8678d}
@@ -194,7 +200,7 @@ D\-Estructor.
 
 Destructor 
 
-Definition at line 490 of file seatplan.\-cc.
+Definition at line 593 of file seatplan.\-cc.
 
 
 
@@ -248,7 +254,7 @@ Creating H\-T\-M\-L file.
 \end{DoxyParams}
 
 
-Definition at line 231 of file seatplan.\-cc.
+Definition at line 311 of file seatplan.\-cc.
 
 
 
