--- a/doc/latex/index.tex
+++ b/doc/latex/index.tex
@@ -8,6 +8,8 @@ This software creates seating plan for examinations. It provides five different 
 4) MySQL Connector for C++
 5) Boost Library
 6) jwSMTP Library
+7) libharu PDF Library
+8) exim4 mail server
 \end{DoxyVerb}
 
 
@@ -125,6 +127,68 @@ include string header file in that. And again run make
 \end{DoxyVerb}
 
 
+7) libharu P\-D\-F Library
+
+Download \href{https://github.com/libharu/libharu/tarball/master}{\tt libharu} Library
+
+Follow the steps to install \begin{DoxyVerb}$ cd ~/Downloads
+$ tar -xzf libharu-libharu-RELEASE_2_3_0RC2-61-g22e741e.tar.gz
+$ cd libharu-libharu-22e741e
+$ cmake -G 'Unix Makefiles'
+$ make
+$ sudo make install
+
+NOTE: If you get any error regarding cmake, then run
+$ sudo apt-get install cmake
+to install cmake
+\end{DoxyVerb}
+
+
+8) exim4 Mail Server
+
+Run the following commands in terminal \begin{DoxyVerb}$ sudo apt-get install exim4
+$ sudo dpkg-reconfigure exim4-config
+\end{DoxyVerb}
+
+
+A Mail Server Configuration window will appear.\par
+ Follow the following instructions to configure the mail server. \begin{DoxyVerb}1) The first page is just and introduction. Press ENTER
+2) On the second page choose the second option i.e 
+   mail sent by smarthost; received via SMTP or fetchmail and 
+   press ENTER.
+3) Next Keep the system mail name as it is and press ENTER.
+4) Just Press Enter for the next page.
+5) The next page asks you to enter IP addresses to listen on
+   incoming SMTP connections. Leave it as it is and Press ENTER
+6) Even on the next page let the value be the default one and 
+   Press ENTER.
+7) Leave the next page as it is and Press ENTER.
+8) The next page asks you for IP address or host name of the outgoing
+   smarthost. Enter “smtp.example.com::587″. Where example refers to
+   gmail, yahoo or any other mail service provider and 587 is port number.
+9) The Next page asks you if you want to hide local mail name in 
+   outgoing mail? Choose “No”.
+10)The Next asks you if you want to keep number of DNS-queries minimal?
+   Choose “No”.
+11)On the next page choose the  delivery method for local mail as
+   mbox format in /var/mail/.
+12)Next page asks you if you want to split configuration into small
+   files? Choose “No”. 
+13)Next keep root and postmaster mail recipient empty.
+\end{DoxyVerb}
+
+
+Now terminal will show that M\-T\-A is being restarted.\par
+ After this is done, run the following command in terminal \begin{DoxyVerb}$ sudo vim /etc/exim4/passwd.client
+\end{DoxyVerb}
+
+
+Add following in the file \begin{DoxyVerb}*:USERNAME@example.com:PASSWORD.
+
+Where, USERNAME is  a valid email address and PASSWORD is  password for USERNAME.
+\end{DoxyVerb}
+
+
 \subsection*{I\-N\-S\-T\-A\-L\-L\-A\-T\-I\-O\-N\-: }
 
 Check \href{https://github.com/GreatDevelopers/bakaplan/blob/master/INSTALLATION.txt}{\tt I\-N\-S\-T\-A\-L\-L\-A\-T\-I\-O\-N} steps for using this software.
@@ -141,6 +205,6 @@ Website\-: \href{http://gndec.ac.in/~hsrai}{\tt http\-://gndec.\-ac.\-in/$\sim$h
 
 Mandeep Kaur
 
-Website\-: \href{http://mandeepsimak.wordpress.com}{\tt http\-://mandeepsimak.\-wordpress.\-com}
+Website\-: \href{http://simak.in}{\tt http\-://simak.\-in}
 
 Email\-: baithnekaplan \mbox{[}A\-T\mbox{]} gmail.\-com 
