--- a/doc/latex/sendmail-detail_8h.tex
+++ b/doc/latex/sendmail-detail_8h.tex
@@ -10,13 +10,13 @@ S\-M\-T\-P swttings detail.
 \subsection*{Variables}
 \begin{DoxyCompactItemize}
 \item 
-\hypertarget{sendmail-detail_8h_a6a17dd6df02d3a5118873bc84ce9801d}{const char {\bfseries S\-E\-N\-D\-E\-R\-\_\-\-E\-M\-A\-I\-L\-I\-D} \mbox{[}F\-I\-L\-E\-\_\-\-S\-I\-Z\-E\mbox{]} = \char`\"{}baithnekaplan\char`\"{}}\label{sendmail-detail_8h_a6a17dd6df02d3a5118873bc84ce9801d}
+\hypertarget{sendmail-detail_8h_a6a17dd6df02d3a5118873bc84ce9801d}{const char {\bfseries S\-E\-N\-D\-E\-R\-\_\-\-E\-M\-A\-I\-L\-I\-D} \mbox{[}F\-I\-L\-E\-\_\-\-S\-I\-Z\-E\mbox{]} = \char`\"{}baithnekaplan@gmail.\-com\char`\"{}}\label{sendmail-detail_8h_a6a17dd6df02d3a5118873bc84ce9801d}
 
 \item 
-\hypertarget{sendmail-detail_8h_a5a43d9760874d06771eec35419dad507}{const char {\bfseries S\-E\-R\-V\-E\-R\-\_\-\-M\-A\-I\-L} \mbox{[}F\-I\-L\-E\-\_\-\-S\-I\-Z\-E\mbox{]} = \char`\"{}localhost\char`\"{}}\label{sendmail-detail_8h_a5a43d9760874d06771eec35419dad507}
+\hypertarget{sendmail-detail_8h_a5a43d9760874d06771eec35419dad507}{const char {\bfseries S\-E\-R\-V\-E\-R\-\_\-\-M\-A\-I\-L} \mbox{[}F\-I\-L\-E\-\_\-\-S\-I\-Z\-E\mbox{]} = \char`\"{}202.\-164.\-53.\-122\char`\"{}}\label{sendmail-detail_8h_a5a43d9760874d06771eec35419dad507}
 
 \item 
-\hypertarget{sendmail-detail_8h_af0dde2cd6a9fa974836b177b410e97fe}{const char {\bfseries U\-S\-E\-R\-N\-A\-M\-E} \mbox{[}F\-I\-L\-E\-\_\-\-S\-I\-Z\-E\mbox{]} = \char`\"{}/$\sim$mandy\char`\"{}}\label{sendmail-detail_8h_af0dde2cd6a9fa974836b177b410e97fe}
+\hypertarget{sendmail-detail_8h_af0dde2cd6a9fa974836b177b410e97fe}{const char {\bfseries U\-S\-E\-R\-N\-A\-M\-E} \mbox{[}F\-I\-L\-E\-\_\-\-S\-I\-Z\-E\mbox{]} = \char`\"{}/$\sim$mandeep\char`\"{}}\label{sendmail-detail_8h_af0dde2cd6a9fa974836b177b410e97fe}
 
 \end{DoxyCompactItemize}
 
